--- a/app/assets/resetPass.html
+++ b/app/assets/resetPass.html
@@ -5,9 +5,12 @@
     <title>Xác nhận mật khẩu</title>
 </head>
 <body>
-    <h2>AIRSENSE</h2>
+<h2 style="text-align: center">AIRSENSE</h2>
+<div style="margin-left: 20px">
     <p>Mật khẩu mới của bạn là : {{newPass}}</p>
     <p>Để hoàn tất vui lòng click vào vào link : <a href={{redirectLink}}>xác nhận</a></p>
     <p style="color: firebrick">Nếu bạn không xác nhận phiên làm việc sẽ hết hạn sau 2 giờ</p>
+</div>
+
 </body>
 </html>
