--- a/app/assets/resetPass.html
+++ b/app/assets/resetPass.html
@@ -5,10 +5,10 @@
     <title>Xác nhận mật khẩu</title>
 </head>
 <body>
-<h2 style="text-align: center">AIRSENSE</h2>
 <div style="margin-left: 20px">
     <p>Mật khẩu mới của bạn là : {{newPass}}</p>
-    <p>Để hoàn tất vui lòng click vào vào link : <a href={{redirectLink}}>xác nhận</a></p>
+    <p>Để hoàn tất vui lòng click vào vào link : <a href={{redirectLink}}>xác nhận </a>, để hoàn tất đổi mật khẩu</p>
+    <p>Sau khi xác nhận hãy đăng nhập lại bằng mật khẩu mới và thực hiện đổi mật khẩu</a></p>
     <p style="color: firebrick">Nếu bạn không xác nhận phiên làm việc sẽ hết hạn sau 2 giờ</p>
 </div>
 
