hoàn thiện lần 2

--- a/app/static/ticket2.html
+++ b/app/static/ticket2.html
@@ -86,7 +86,7 @@
 												line-height: 32px;
 											"
 										>
-											<b>You have been approved to join</b>
+											<b>Bạn đã được chấp nhận tham gia</b>
 											<div style="font-weight: normal; color: #b3b5b7">{{ten_su_kien}}</div>
 										</h1>
 									</div>
@@ -300,9 +300,8 @@
 																	>
 																		<a
 																			style="text-decoration: none"
-																			href="https://www.google.com/maps/search/?api=1&amp;query=Novotel%20Hanoi%20Thai%20Ha&amp;query_place_id=ChIJtShZIIqtNTERqC-vUOJ-50Y"
+																			href="{{url_map}}"
 																			target="_blank"
-																			data-saferedirecturl="https://www.google.com/url?q=https://www.google.com/maps/search/?api%3D1%26query%3DNovotel%2520Hanoi%2520Thai%2520Ha%26query_place_id%3DChIJtShZIIqtNTERqC-vUOJ-50Y&amp;source=gmail&amp;ust=1691053867641000&amp;usg=AOvVaw1tbjzBrGjZB6E1OXD_faZm"
 																			><div>
 																				<div
 																					style="
@@ -372,9 +371,8 @@
 									>
 										<div>
 											<div class="m_2731974078115198682mirror-content">
-												<p>
-													​Congratulations! You can find more information on the event page.
-												</p>
+												<p style="color: gray;">Bạn có thể tìm thêm thông tin trên trang sự kiện.</p>
+												<p style="margin-top: -15px;"><i>Vui lòng lưu lại thông tin vé tham dự để tham gia sự kiện.</i></p>
 											</div>
 										</div>
 									</div>
@@ -428,11 +426,11 @@
 																		valign="middle"
 																	>
 																		<a
-																			href="https://set.hust.edu.vn/"
+																			href="{{url_event}}"
 																			style="
 																				display: inline-block;
-																				background-color: #de3163;
-																				color: white;
+																				background-color: #ebeced;
+																				color: #131517;
 																				font-family: helvetica;
 																				font-size: 16px;
 																				line-height: 1;
@@ -444,8 +442,7 @@
 																				padding: 12px 24px;
 																			"
 																			target="_blank"
-																			data-saferedirecturl="https://www.google.com/url?q=https://lu.ma/xhavn0m4?pk%3Dg-aDn4nBYXYF6EGQb&amp;source=gmail&amp;ust=1691053867641000&amp;usg=AOvVaw3cLuv-biwZlTakzodKBvcU"
-																			>Event Page</a
+																			>Sự kiện</a
 																		>
 																	</td>
 																</tr>
@@ -478,8 +475,8 @@
 																			href="{{url_my_ticket}}"
 																			style="
 																				display: inline-block;
-																				background-color: #ebeced;
-																				color: #131517;
+																				background-color: #de3163;
+																				color: white;
 																				font-family: helvetica;
 																				font-size: 16px;
 																				line-height: 1;
@@ -492,7 +489,7 @@
 																			"
 																			target="_blank"
 																			data-saferedirecturl="https://www.google.com/url?q=https://lu.ma/e/ticket/evt-EQ7FcOcLtZnQjPx?pk%3Dg-aDn4nBYXYF6EGQb&amp;source=gmail&amp;ust=1691053867641000&amp;usg=AOvVaw2KcFhAQ0iK2LdSYiKDmFm2"
-																			>My Ticket</a
+																			>Vé tham dự</a
 																		>
 																	</td>
 																</tr>
